# autoware_mickrobot

./: README.md
mick_robot_vehicle_interface/: CMakeLists.txt  README.md  package.xml
mick_robot_vehicle_interface/config/: mick_robot.param.yaml
mick_robot_vehicle_interface/include/mick_robot_vehicle_interface/: mick_chassis_msg.h  mick_chassis_protocol.hpp  mick_robot_vehicle_interface.hpp
mick_robot_vehicle_interface/launch/: mick_robot_vehicle_interface.launch.xml
mick_robot_vehicle_interface/src/mick_robot_vehicle_interface/: mick_chassis_protocol.cpp  mick_robot_vehicle_interface.cpp  mick_robot_vehicle_interface_node.cpp
